Fix problem in Vehicle & Building UnitWindow
Changes:
- TabPanel in UnitWindow no longer immutable
- Fix code smells in StyleManager & GuideWindow
- VehicleTableModel distance to waypoint column is defined as double
- InventoryTabPanel cleaned up to use the interfaces to remove Blocker code smells

Part of #820